# elaborate

./: .gitignore  .rgignore  Cargo.toml  README.md  clippy.toml  clippy_example.toml  rust-toolchain
.github/workflows/: ci.yml
clippy_conf/: clippy.toml
elaborate/: Cargo.toml
elaborate/examples/: create_dir.rs  create_dir_wc.rs  greeting.rs
elaborate/src/: lib.rs
elaborate/tests/: call_failed.rs  ci.rs
fixtures/create_dir/: Cargo.toml
generate/: Cargo.toml
generate/checkouts/: README.txt
generate/src/: lib.rs  public_item_map.rs  source_builder.rs
generate/src/util/: mod.rs  public_item.rs  rustdoc_types.rs  token.rs  tokens.rs
generate/tests/: ci.rs
