[workspace]
exclude = ["fixtures"]
members = ["elaborate", "generate"]
resolver = "2"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
format_collect = "allow"
missing_errors_doc = "allow"

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/trailofbits/dylint"
rev = "107a3332a7d488a64ad247576ad99b19a208aff2"
pattern = [
    "examples/general",
    "examples/supplementary",
    "examples/restriction/inconsistent_qualification",
    "examples/restriction/suboptimal_pattern",
]
