[package]
name = "elaborate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.2"
walkdir = "2.5"
once_cell = "1.20"
regex = "1.11"
tempfile = "3.17"
toml = "0.8"

# smoelius: If you add features below, please also add them near the top of src/lib.rs.
[features]
anonymous_pipe = []
buf_read_has_data_left = []
bufread_skip_until = []
core_io_borrowed_buf = []
exit_status_error = []
file_buffered = []
file_lock = []
junction_point = []
linux_pidfd = []
panic_backtrace_config = []
path_file_prefix = []
peer_credentials_unix_socket = []
raw_os_error_ty = []
read_buf = []
seek_stream_len = []
tcp_deferaccept = []
tcp_linger = []
tcp_quickack = []
thread_spawn_unchecked = []
unix_file_vectored_at = []
unix_set_mark = []
unix_socket_ancillary_data = []
unix_socket_peek = []
wasi_ext = []
windows_by_handle = []
windows_change_time = []
windows_process_extensions_raw_attribute = []
write_all_vectored = []

[lints]
workspace = true
