[package]
name = "elaborate"
version = "0.1.0"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Wrappers for standard library functions and types to produce more elaborate error messages"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/trailofbits/elaborate"

[dependencies]
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.5"
walkdir = "2.5"
regex = "1.11"
tempfile = "3.21"
toml = "0.9"

# smoelius: If you add features below, please also add them near the top of src/lib.rs.
[features]
buf_read_has_data_left = []
bufread_skip_until = []
core_io_borrowed_buf = []
exit_status_error = []
file_buffered = []
junction_point = []
linux_pidfd = []
normalize_lexically = []
panic_backtrace_config = []
path_file_prefix = []
peer_credentials_unix_socket = []
raw_os_error_ty = []
read_buf = []
seek_stream_len = []
set_permissions_nofollow = []
tcp_deferaccept = []
tcp_linger = []
thread_spawn_unchecked = []
unix_file_vectored_at = []
unix_mkfifo = []
unix_send_signal = []
unix_set_mark = []
unix_socket_ancillary_data = []
unix_socket_peek = []
wasi_ext = []
windows_by_handle = []
windows_change_time = []
windows_process_extensions_raw_attribute = []
write_all_vectored = []

[lints]
workspace = true
