[package]
name = "generate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
if_chain = "1.0"
itertools = "0.13"
once_cell = "1.20"
public-api = "0.37"
regex = "1.10"
rustdoc-types = "0.27"
serde_json = "1.0"

elaborate = { path = "../elaborate", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
similar-asserts = "1.6"

[features]
default = ["use_elaborate"]
use_elaborate = ["elaborate"]

[lints]
workspace = true
