[package]
name = "generate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
if_chain = "1.0"
itertools = "0.13"
once_cell = "1.20"
public-api = "0.39"
regex = "1.10"
rustdoc-types = "0.31"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
similar-asserts = "1.6"

[lints]
workspace = true
