[package]
name = "generate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
if_chain = "1.0"
itertools = "0.14"
public-api = "0.44"
regex = "1.11"
rustdoc-types = "0.41"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
similar-asserts = "1.7"

[lints]
workspace = true
